fix: 并发+健壮性加固——虚拟线程、LLM 全局信号量、工具步超时、记忆过滤 metadata 化
C1 并发上限：agentExecutor/worker 改 Java 21 虚拟线程，I/O 密集会话近乎无上限并发不爆平台线程
H1 LLM 并发：LlmLimitedChatModel 装饰器 + BeanPostProcessor 统一包住 ChatModel，全局信号量(默认16)防 DashScope 429 风暴（by-name 注入也拿到受限版）
#1 工作流工具步超时：step-timeout-seconds(默认120)，挂起工具在虚拟线程上超时终止，防线程泄漏
#9 记忆过滤 metadata 化：nextStepPrompt 消息带标记，不再文本比对（死循环调整会改写文本导致漏滤）
#7 前端 SSE 空闲超时 60s→180s，避免误掐断慢步骤
95 测试全绿。